--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<style> h1 {text-align: center;}
-	
-	ul {list-style: none;}
- body {background-image: url('1.png'); background-attachment: fixed;background-size: cover;: } 
+	<style> 
 </style>
 	
 	
@@ -25,5 +22,8 @@
 		<li>Hobi: APAPUN YANG PENTING GA GABUT!!!</li>
 		<li>Cita-cita:Masuk Surga</li>
 	</ul>
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="index.css">
+</body>
 </body>
 </html>
